Add support for the import of XSD inline types (#1051)
* Add/Update tests for inline types

* Introduce support for XML inline/anonymous type import