@@ -18,7 +18,6 @@ package com.regnosys.rosetta.tools.modelimport;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.Map.Entry;
 import java.util.stream.Collectors;
 
 import jakarta.inject.Inject;
@@ -26,8 +25,7 @@ import jakarta.inject.Inject;
 import com.regnosys.rosetta.rosetta.RosettaNamed;
 import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.xmlet.xsdparser.core.XsdParser;
-import org.xmlet.xsdparser.xsdelements.XsdAbstractElement;
-import org.xmlet.xsdparser.xsdelements.XsdSchema;
+import org.xmlet.xsdparser.xsdelements.*;
 
 import com.google.common.collect.Streams;
 import com.regnosys.rosetta.rosetta.RosettaModel;
@@ -37,6 +35,7 @@ import com.regnosys.rosetta.utils.ModelIdProvider;
 import com.rosetta.model.lib.ModelSymbolId;
 import com.rosetta.util.serialisation.RosettaXMLConfiguration;
 import com.rosetta.util.serialisation.TypeXMLConfiguration;
+import org.xmlet.xsdparser.xsdelements.elementswrapper.ReferenceBase;
 
 public class XsdImport {
 	public final String ENUM = "enum";
@@ -63,7 +62,9 @@ public class XsdImport {
 
 	public ResourceSet generateRosetta(RosettaXsdParser parsedInstance, ImportTargetConfig targetConfig) {
 		List<XsdAbstractElement> xsdElements = parsedInstance.getResultXsdSchemas().flatMap(XsdSchema::getXsdElements).toList();
-		
+
+		xsdElements = promoteInlineTypes(xsdElements);
+
 		// Initialization
 		xsdMapping.initializeBuiltins(rosettaModelFactory.getResourceSet(), targetConfig);
 		
@@ -108,17 +109,98 @@ public class XsdImport {
 
 		return rosettaModelFactory.getResourceSet();
 	}
-	
+
+	private List<XsdAbstractElement> promoteInlineTypes(List<XsdAbstractElement> elements) {
+		List<XsdAbstractElement> result = new ArrayList<>();
+
+		for (XsdAbstractElement elem : elements) {
+			if (elem instanceof XsdElement xsdElement) {
+				XsdComplexType inlineType = xsdElement.getXsdComplexType();
+				if (((XsdElement) elem).getType() == null && inlineType != null) {
+					inlineType.setName(xsdElement.getRawName());
+
+					result.add(inlineType);
+
+					result.addAll(promoteInlineTypesRecursively(getChildElements(inlineType)));
+
+					continue;
+				}
+			}
+			result.add(elem);
+			result.addAll(promoteInlineTypesRecursively(getChildElements(elem)));
+		}
+		return result;
+	}
+
+	private List<XsdAbstractElement> promoteInlineTypesRecursively(List<XsdAbstractElement> elements) {
+		List<XsdAbstractElement> result = new ArrayList<>();
+		for (XsdAbstractElement elem : elements) {
+			if (elem instanceof XsdElement xsdElement) {
+				XsdComplexType inlineType = xsdElement.getXsdComplexType();
+				if (((XsdElement) elem).getType() == null && inlineType != null) {
+					if (inlineType.getXsdChildElement() != null && inlineType.getChildAsGroup() == null) {
+						inlineType.setName(xsdElement.getRawName());
+						result.add(inlineType);
+						result.addAll(promoteInlineTypesRecursively(getChildElements(inlineType)));
+					}
+				}
+			}
+		}
+		return result;
+	}
+
+	private List<XsdAbstractElement> getChildElements(XsdAbstractElement element) {
+		if (element == null) return Collections.emptyList();
+		List<XsdAbstractElement> childElements = new ArrayList<>();
+		List<ReferenceBase> refs = element.getElements();
+
+		if (refs != null) {
+			for (ReferenceBase ref : refs) {
+				XsdAbstractElement el = ref.getElement();
+				if (el instanceof XsdElement) {
+					childElements.add(el);
+				} else {
+					childElements.addAll(getChildElements(el));
+				}
+			}
+		} else if (element instanceof XsdComplexType complexType) {
+			//check for complex/simple content, check for extension inside
+			if (complexType.getComplexContent() != null) {
+				XsdComplexContent content = complexType.getComplexContent();
+				childElements.addAll(getChildElements(content));
+
+				if (content.getXsdExtension() != null) {
+					childElements.addAll(getChildElements(content.getXsdExtension()));
+				}
+			} else if (complexType.getSimpleContent() != null){
+				XsdSimpleContent content = complexType.getSimpleContent();
+				childElements.addAll(getChildElements(content));
+
+				if (content.getXsdExtension() != null) {
+					childElements.addAll(getChildElements(content.getXsdExtension()));
+				}
+			} else {
+				//TODO: Find other cases?
+			}
+
+		}
+		return childElements;
+	}
+
 	public RosettaXMLConfiguration generateXMLConfiguration(XsdParser parsedInstance, ImportTargetConfig targetConfig) {
-		Map<String, List<XsdAbstractElement>> targetNamespaceToXsdElementsMap = 
-				parsedInstance.getResultXsdSchemas()
-					.collect(Collectors.toMap(
-                            XsdSchema::getTargetNamespace,
-                            XsdSchema::getXsdElements,
-                            Streams::concat))
-					.entrySet()
-					.stream()
-					.collect(Collectors.toMap(Entry::getKey, entry -> entry.getValue().toList()));
+		Map<String, List<XsdAbstractElement>> targetNamespaceToXsdElementsMap =
+			parsedInstance.getResultXsdSchemas()
+				.flatMap(schema -> {
+					// Update elements, pair with schema's namespace
+					List<XsdAbstractElement> promotedElements = promoteInlineTypes(schema.getXsdElements().toList());
+					return promotedElements.stream()
+							.map(element -> new AbstractMap.SimpleEntry<>(schema.getTargetNamespace(), element));
+				})
+				.collect(Collectors.groupingBy(
+						entry -> Optional.ofNullable(entry.getKey()).orElse("__NULL__"),
+						Collectors.mapping(Map.Entry::getValue,
+								Collectors.toList())
+				));
 				
 		Map<ModelSymbolId, TypeXMLConfiguration> result = new HashMap<>();
 		targetNamespaceToXsdElementsMap.forEach((targetNamespace, xsdElements) -> {
